Slight spacing correction

--- a/_sass/quinnmx.scss
+++ b/_sass/quinnmx.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.article.content h1:first-child {
+.article--page.content h1:first-child {
   margin-bottom: 1rem;
 }
 
@@ -54,7 +54,7 @@
     margin-bottom: 2rem;
   }
   small, .caption {
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: unquote(map-get($bodytype, font-family));
     margin-bottom: 1rem;
   }
